--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -1,10 +1,12 @@
 #header {
+    background-color: $main-color;
     background: url('../images/bg-header.jfif');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    min-width: 100vw;
     width: 100%;
-    height: 120vh;
+    height: 100vh;
 
     #navbar {
         margin-top: 20px;
