Job Categories Added

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -2,6 +2,7 @@
 @import 'header';
 @import 'joblists';
 @import 'cv-sec';
+@import 'job-categories';
 @import url(../assets/fonts/fontiran.css);
 
 @font-face {
