--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -3,6 +3,8 @@
 @import 'joblists';
 @import 'cv-sec';
 @import 'job-categories';
+@import 'job-steps';
+@import 'customer-comments';
 @import url(../assets/fonts/fontiran.css);
 
 @font-face {
