--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -4,7 +4,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-width: 100vw;
+    // min-width: 100vw;
     width: 100%;
     height: 100vh;
 
@@ -55,6 +55,7 @@
         top: 0;
         visibility: hidden;
         overflow-x: hidden;
+        box-shadow: 0 1px 23px rgba(0,0,0,.1);
         .mobile-nav-brand {
             width: 150px;
             height: auto;
