--- a/SCSS/_job-categories.scss
+++ b/SCSS/_job-categories.scss
@@ -1,5 +1,5 @@
 .job-categories-container{
-
+padding: 30px 0;
     .job-categories{
         .job-category-item{
             background-color: #fff;
