--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -5,6 +5,8 @@
 @import 'job-categories';
 @import 'job-steps';
 @import 'customer-comments';
+@import 'stats';
+@import 'articles-sec';
 @import url(../assets/fonts/fontiran.css);
 
 @font-face {
