--- a/SCSS/_cv-sec.scss
+++ b/SCSS/_cv-sec.scss
@@ -1,5 +1,5 @@
 .cv-section{
-    margin: 50px 0 0;
+    margin: 0;
     width: 100%;
     height: 300px;
     background: url('../images/bg_shape.jpg');
