--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -7,6 +7,7 @@
 @import 'customer-comments';
 @import 'stats';
 @import 'articles-sec';
+@import 'footer';
 @import url(../assets/fonts/fontiran.css);
 
 @font-face {
