--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -877,6 +877,134 @@
   width: 100%;
 }
 
+footer {
+  background-color: #2F333C;
+  color: #fff;
+  padding: 70px  0 10px;
+}
+
+footer .footer-details p {
+  line-height: 2;
+  text-align: justify;
+  background-color: #4d515a79;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+footer .footer-title {
+  margin-bottom: 20px;
+}
+
+footer .footer-links .footer-link {
+  margin-bottom: 15px;
+}
+
+footer .footer-links .footer-link a {
+  color: #fff;
+  font-weight: 400;
+  font-size: 14px;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+footer .footer-links .footer-link a:hover {
+  margin-right: 10px;
+}
+
+footer .footer-form {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 9px;
+}
+
+footer .footer-form input {
+  padding: 21px 20px;
+  position: relative;
+  border: none;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  font-size: 13px;
+}
+
+footer .footer-form input:focus, footer .footer-form input:hover, footer .footer-form input:active {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+footer .footer-form button {
+  position: absolute;
+  background-color: #1967D2;
+  right: 25px;
+  top: 51px;
+  padding: 7px 10px;
+  border-radius: 8px;
+  border: none;
+  color: #fff;
+  border: 1px solid transparent;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+
+footer .footer-form button:hover {
+  background-color: #fff;
+  border-color: #1967D2;
+  color: #1967D2;
+}
+
+footer .footer-sec-2 {
+  margin: 20px 0 0;
+  border-top: 1px solid #FFFFFF1A;
+  padding-top: 30px;
+}
+
+footer .footer-sec-2 .copyright strong {
+  color: red;
+  font-size: 23px;
+  vertical-align: -3px;
+  margin: 0 3px;
+}
+
+footer .footer-sec-2 .social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+footer .footer-sec-2 .social-links .social-link {
+  margin-right: 30px;
+}
+
+footer .footer-sec-2 .social-links .social-link:first-child {
+  margin-right: 0;
+}
+
+footer .footer-sec-2 .social-links .social-link a {
+  color: #fff;
+}
+
+@media screen and (max-width: 568px) {
+  .footer-sec-2 {
+    text-align: center;
+    margin: 0 auto;
+  }
+  .footer-sec-2 .social-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+}
+
 @font-face {
   font-family: IRANSans;
   font-style: normal;
