--- a/SCSS/_header.scss
+++ b/SCSS/_header.scss
@@ -50,6 +50,7 @@
         width: 100%;
         background-color: #fff;
         display: flex;
+        flex-direction: row-reverse;
         position: fixed;
         z-index: 99999;
         top: 0;
@@ -174,6 +175,154 @@
         }
     }
 }
+.back-side-menu{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.4);
+    z-index: 85858854;
+}
+.side-menu{
+    width: 250px;
+    height: 100vh;
+    position: fixed;
+    background-color: #202125;
+    z-index: 85858855;
+    top: 0;
+    right: -250px;
+    box-sizing: border-box;
+   
+    
+    .side-menu-header{
+        background-color: #fff;
+        padding: 0;
+        width: 100%;
+        height: 65px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 70%;
+            height: auto;
+            
+        }
+    }
+    .side-nav-content{
+        padding: 20px;
+        .side-nav-link{
+            color: #979797;
+            transition: color .2s ease-in;
+            margin-bottom: 10px;
+            font-weight: 500;
+            &:hover{
+                color: #fff;
+            }
+    
+            &:first-child{
+                color: gold;
+            }
+        }
+        .side-menu-social{
+            margin-top: 25px;
+            .social-links{
+                display: flex;
+                justify-content: center;
+                flex-direction: row-reverse;
+                .social-link{
+                    color: #fff;
+                    padding: 10px ;
+                    a{
+                        color: rgb(194, 194, 194);
+                        font-size: 20px;
+
+                        &:hover{
+                            color: #fff;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.sign-in-modal{
+    .sign-in-modal-content{
+        padding: 20px;
+        .sign-in-modal-header{
+            border: none;
+            display: flex;
+            justify-content: space-between;
+            span{
+                font-weight: 400;
+            }
+            .modal-title{
+                 font: {
+                 size: 19px;
+                 weight: 700;
+                }
+            }
+        } 
+
+        .sign-in-modal-body{
+            .modal-form{
+                label{
+                    font-size: 14px;
+                    color: #202124;
+                    font-weight: 500;
+                }
+
+                input{
+                    border: 1px solid transparent;
+                    padding: 27px 20px;
+                    background-color: #F0F5F7;
+                    border-radius: 8px;
+                    outline: none;
+                    box-shadow: none;
+                    margin-bottom: 20px;
+                    transition: all .2s linear;
+                    &::placeholder{
+                        text-align: right;
+                        font-size: 14px;
+                        
+                    }
+                    &:focus{
+                        background-color: #fff;
+                        border-color: $main-color;
+                    }
+                }
+                .sign-in-modal-btn{
+                    background-color: $main-color;
+                    height: 50px;
+                    border-radius: 8px;
+                    margin-top: 30px;
+                    border: 1px solid transparent;
+                    transition: all .3s ease-in;
+                    &:hover{
+                        background-color: #fff;
+                        border: 1px solid $main-color;
+                        color: $main-color;
+                    }
+                }
+                .ask-register{
+                    text-align: center;
+                    margin: 20px auto 0 auto;
+                    display: flex;
+                    justify-content: center;
+
+                    strong{
+                        color: $main-color;
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+    }
+}
 
 @media (min-width: 1200px) {
 
@@ -218,7 +367,9 @@
             color: rgba(255, 255, 255, 0.801);
         }
 
-        
+        .form-border-left{
+            border: none !important;
+        }
        
     }
 
