--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -107,3 +107,29 @@ body{
 	}
 }
 
+#top {
+	position: fixed;
+	bottom: -60px;
+	right: 20px;
+	background-color: $main-color;
+	box-shadow: 0 1px 10px 0 rgba($main-color , .4);
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+	font-size: 20px;
+	transition: all 0.3s ease;
+
+	&hover {
+		background-color: rgb(190, 19, 19);
+	  }
+
+  }
+  
+  button{
+	  outline: none !important;
+	  box-shadow: none !important;
+  }
